// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCard renders default 1`] = `
<div
  className="css-e82819"
  data-cy="linkCard"
>
  <div
    className="css-ysit7j"
  >
    <a
      className="css-gsqxnx"
      href="http://google.com"
    >
      <span
        className="css-1uecx0y"
        data-cy="box"
      >
        Google
      </span>
    </a>
    Example Content
  </div>
</div>
`;

exports[`LinkCard renders with external link 1`] = `
<div
  className="css-e82819"
  data-cy="linkCard"
>
  <div
    className="css-ysit7j"
  >
    <a
      className="css-gsqxnx"
      href="http://google.com"
      rel="noopener"
      target="_blank"
    >
      <span
        className="css-1uecx0y"
        data-cy="box"
      >
        Google
      </span>
    </a>
    Example Content
  </div>
</div>
`;
